--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,2 +1,4 @@
-<h2>The counter values is {{counter}}</h2>
+<h2>The counter values is ss {{ counter$ | async}}</h2>
+<h2>The counter values is ss {{ channel$ | async}}</h2>
+
 
