--- a/src/app/counter/counter-input/counter-input.component.html
+++ b/src/app/counter/counter-input/counter-input.component.html
@@ -1,5 +1,21 @@
-<p>counter-input works!</p>
-<button (click)="onIncrement()">Increment</button>
-<button (click)="onDecrement()">Decrement</button>
-<button (click)="onReset()">Reset</button>
+<div class="row">
+    <div class="col-md-12">
+        <button (click)="onIncrement()" class="btn btn-primary">Increment</button> &nbsp;
+        <button (click)="onDecrement()" class="btn btn-warning">Decrement</button> &nbsp;
+        <button (click)="onReset()" class="btn btn-info">Reset</button>
+    </div>
+</div>
+
+
+<br />
+<div class="row">
+    <div class="col-md-12">
+        <input type="text" placeholder="Enter custom value" [(ngModel)] = "value" />
+        <button (click)=onAdd() class="btn btn-info">Submit</button>
+    </div>
+    <div class="col-md-12">
+        <button (click)="changeChannel()">change channel</button>
+    </div>
+</div>
+
 
