--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -1,18 +1,14 @@
 
 <div class="row">
     <div class="col-md-12">
-        <app-counter-input 
-        (increment)= "Increment()"
-        (decrement)="Decrement()"
-        (reset)="Reset()"
-        ></app-counter-input>
+        <app-counter-input ></app-counter-input>
     </div>
 
 </div> 
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <app-counter-output [counter]="counter"></app-counter-output>
+        <app-counter-output></app-counter-output>
     </div>
 
 </div> 
